app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-crud
  namespace: atorres
spec:
  type: NodePort
  selector:
    app: app-crud
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
