bd-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: atorres
spec:
  clusterIP: None
  selector:
    app: bd
    tier: backend
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
