ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: atorres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.atorres.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-crud
            port:
              number: 80
